pyquest/tests/parsing/valid/test002.ql
// Form with question of type date
form label {
  "Question?"
    var: date
}