pyquest/tests/parsing/invalid/test007.ql
// Question identifier with quotation marks
form label {
    "Question?"
    "var" : boolean
}